a few updates
